tests/ui/traits/const-traits/variance.stderr
error: ['a: *]
  --> $DIR/variance.rs:9:21
   |
LL | fn foo<'a: 'a>() -> impl const Foo {}
   |                     ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

